2005-12-29  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/repos/cvs.rb (revisions): revise a regexp by miya (closes
	#50).

2005-12-26  Kazuhiko  <kazuhiko@fdiary.net>
	* style/rd+/rd2html.rb (apply_to_Reference_with_URL): revise a
	regexp of image uris by Masao Mutoh (reported by GOTO Naohisa).

2005-12-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/attach.rb (attach_image_anchor): specify the size of
	attached images using width and height attributes of img elements.

	* template/view.html: add a <hr> separator between main contents
	and a sidebar (closes #45).

	* hiki/util.rb (sendmail), hikiconf.rb.sample, misc/i18n/hikiconf.rb.sample.en,
	misc/hikifarm/template/index.html: Multiple mail addresses are available at conf.mail
	by separating a comma (closes #23).

	* hikiconf.rb.sample, hiki/config.rb, hiki/util.rb, misc/i18n/hikiconf.rb.sample.en,
	plugin/00default.rb, plugin/de/00default.rb, plugin/en/00default.rb, plugin/fr/00default.rb,
	plugin/it/00default.rb, plugin/ja/00default.rb, template/hiki.conf: Administrator's mail
	addresses are held as an array internally.

2005-12-18  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (dispatch): enter 'preview' mode when no submit
	parameter is sent from 'edit' mode (closes #43).

2005-12-17  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/plugin.rb (save): do not remove spaces from the begining
	and the end of texts (reported by ISOBE,
	Kazuhiko [Hiki-dev:01078]).

2005-12-02  Kazuhiko  <kazuhiko@fdiary.net>
	* contrib/plugin/rast-register.rb: add a new plugin.
	* contrib/plugin/rast-search.rb: add a new plugin.

2005-11-28  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/config.rb (load): fixed: The XMLRPC feature could not be
	disabled (reported by Atsushi SHICHI).

2005-11-22  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: revise output HTML.

2005-11-19  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/02help.rb, plugin/en/02help.rb, plugin/ja/02help.rb: refine