@@ -1,10 +1,10 @@
-# $Id: config.rb,v 1.105 2005-12-25 07:03:06 yanagita Exp $
+# $Id: config.rb,v 1.106 2005-12-28 22:42:55 fdiary Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
 
 HIKI_VERSION  = '0.8.4'
-HIKI_RELEASE_DATE = '2005-12-25'
+HIKI_RELEASE_DATE = '2005-12-29'
 
 require 'cgi'
 require 'hiki/command'
